# mlops_project

./: app.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  template.py  test.py  tox.ini
artifacts/: model.pkl  preprocessor.pkl  test.csv
experiment/: experiments.ipynb
mlruns/0/: meta.yaml
mlruns/0/0ffeac1ebf6b49239150680751018f13/: meta.yaml
mlruns/0/0ffeac1ebf6b49239150680751018f13/metrics/: mae  r2  rmse
mlruns/0/0ffeac1ebf6b49239150680751018f13/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/13c92e2f33334a36b3ec2b74b74795c5/: meta.yaml
mlruns/0/13c92e2f33334a36b3ec2b74b74795c5/metrics/: mae  r2  rmse
mlruns/0/13c92e2f33334a36b3ec2b74b74795c5/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/2f342d2ed7034f7aa7ad904b2e695d15/: meta.yaml
mlruns/0/2f342d2ed7034f7aa7ad904b2e695d15/metrics/: mae  r2  rmse
mlruns/0/2f342d2ed7034f7aa7ad904b2e695d15/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/0/5905167c6b0b43f784d973255d86eb06/: meta.yaml
mlruns/0/5905167c6b0b43f784d973255d86eb06/metrics/: mae  r2  rmse
mlruns/0/6e41153fa0bc4f5297cf81760884fd71/: meta.yaml
mlruns/0/737a3559ce95460a96c52774403a3c7a/: meta.yaml
mlruns/0/b1eb01f8dc484adc99c61a11a51f9642/: meta.yaml
src/components/: data_ingestion.py  data_transformation.py  model_evaluation.py  model_trainer.py
src/exception/: exception.py
src/logger/: logging.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
templates/: index.html  result.html
(+34 files in other folders)
