[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
install_requires = 
    pandas
    scikit-learn
    numpy
    seaborn 
    flask
    mlflow
    dvc
    xgboost
    ipykernel


[options.extras_require]
testing =
    pytest>=7.1.3
    tox>=3.25.1
    black>=22.8.0
    flake>=5.0.4
    mypy>=0.971

# [options.package_data]
# mongodb_crud_automation=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py